# miner-stat-back

./: .env.sample  Cargo.toml  nginx.sample.conf
migrations/: 1_create_worker.sql  2_create_worker_statistic.sql
src/: config.rs  error.rs  main.rs  router.rs  tasks.rs
src/services/: mod.rs
src/services/whatsminer/: api.rs  handler.rs  mod.rs  models.rs  route.rs  types.rs
