[package]
name = "miner-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.35"
dotenv = "0.15.0"
env_logger = "0.11.3"
envy = "0.4.2"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = { version = "3.6.1", features = ["chrono_0_4"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
actix-cors = "0.7.0"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
